--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "mongoose": "^6.8.0",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^1.3.0",
     "typescript": "4.8.4"
   }
 }
